# starHTML

./: .gitignore  .pre-commit-config.yaml  HTMX_TO_DATASTAR_MIGRATION.md  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: deploy.yaml  quality.yml  release.yaml  test.yaml
components/: utils.py
components/docs/: __init__.py  breadcrumb.py  code_block.py  footer.py  header.py  installation_section.py  layout.py  page_template.py  preview_card.py  sidebar.py
components/styles/: globals.css  theme.css
components/ui/: __init__.py  button.py  iconify.py  theme_toggle.py
demo/: 01_basic_signals.py  02_sse_fragments.py  03_forms_binding.py  04_sse_debugging.py  05_async_sse.py  05_syntax_helper.py  06_new_direct_syntax.py  07_stellar_css_exploration.py  README.md  button_demo.py  button_docs_server.py  complete_docs_example.py  docs_layout_demo.py  requirements.txt  simple_docs_button.py  test_button_docs.py  test_live_reload.py  test_theme_debug.py
scripts/: README.md  autotest.py  check_imports.py  check_patterns.py  fix_starhtml.py  install-hooks.sh  lint_patterns.py  quick_test.sh  release.sh  test.py  validate_starhtml.py
src/starhtml/: __init__.py  common.py  components.py  core.py  datastar.py  js.py  live_reload.py  oauth.py  starapp.py  starlette.py  svg.py  xtend.py
starhtml/: __init__.py  common.py  components.py  core.py  datastar.py  datastar_verbose.py  fastapp.py  js.py  live_reload.py  oauth.py  starlette.py  svg.py  xtend.py
static/css/: shadcn.css  stellar-config.json  styles.css
static/js/: datastar.js.map
static/js/stellar/: easing.ts  stellar-notes.txt  stellar.js  types.ts
tests/: conftest.py  test_async_sse.py  test_basic.py  test_button.py  test_common.py  test_components.py  test_core.py  test_datastar.py  test_datastar_direct_attrs.py  test_demos.py  test_docs_layout.py  test_js.py  test_oauth.py  test_sse_datastar_compliance.py  test_sse_format.py  test_starapp.py  test_svg.py  test_xtend.py
