[project]
name = "starhtml"
version = "0.1.0"
description = "Modern HTML generation in Python, inspired by FastHTML"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["starlette", "uvicorn[standard]", "httpx", "beautifulsoup4", "python-dateutil"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-timeout", "pytest-xdist", "pytest-watch"]
dev = ["ipykernel", "pip-tools", "ruff", "pyright"]
doc = ["mkdocs", "mkdocs-material", "mdx-include"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/starhtml"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--verbose",
    "--strict-markers",
    "--strict-config",
    "--cov=src/starhtml",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/starhtml"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
    "except ImportError:",
]

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src", "tests", "demo"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C90", # mccabe complexity
    "PL",  # pylint
]
ignore = ["E501", "PLR0913"]  # Line length, too many arguments

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src", "tests", "demo"]
exclude = ["**/node_modules", "**/__pycache__", "**/.venv", "**/build", "**/dist"]
pythonVersion = "3.11"
pythonPlatform = "All"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportPrivateImportUsage = false
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportDuplicateImport = true
reportWildcardImportFromLibrary = true
reportOptionalMemberAccess = true
reportOptionalCall = true
reportOptionalIterable = true
reportOptionalContextManager = true
reportOptionalOperand = true
reportTypedDictNotRequiredAccess = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportAssertAlwaysTrue = true
reportUnnecessaryTypeIgnoreComment = true
reportImplicitOverride = false
reportShadowedImports = true